[gd_scene format=3 uid="uid://bj7do1woe2ryr"]

[ext_resource type="Script" uid="uid://dh7fr08e00skb" path="res://scripts/ui/target_selection_ui.gd" id="1_eg4pg"]

[node name="TargetSelectionUI" type="Control" unique_id=1980684292]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eg4pg")

[node name="Panel" type="Panel" parent="." unique_id=26192329]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=1626409711]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer" unique_id=52765418]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer" unique_id=792717594]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select target"
horizontal_alignment = 1

[node name="PlayersContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1465102155]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer" unique_id=717240003]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "‚ùå Cancel"
